# trotter

./: .rustfmt.toml  Cargo.toml  changelog.md  demo.crt  demo.key  readme.md
examples/: cert.rs  gemtext.rs  useragent.rs
src/: actor.rs  error.rs  lib.rs  main.rs  parse.rs  response.rs  status.rs  user_agent.rs  utils.rs
