[package]
name = "trotter"
description = "Trotter 🎠 is an experimental crate that aims to make writing Gemini clients fun and easy."
homepage = "https://github.com/catb00mer/trotter"
repository = "https://github.com/catb00mer/trotter"
version = "0.5.1"
edition = "2021"
authors = ["catboomer"]
readme = "readme.md"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["network-programming"]

[lib]
name = "trotter"
path = "src/lib.rs"

[[bin]]
name = "trot"
path = "src/main.rs"

[dependencies]
openssl = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "io-util", "net", "macros", "io-std", "rt-multi-thread", "time"] }
tokio-openssl = "0.6"
url = "2.4"
clap = { version = "4", features = ["derive"] }
urlencoding = "2.1.3"
wildmatch = "2.1.1"

[dev-dependencies]
trotter = { path = "." }
anyhow = "1"
